# auto-code-review-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-review.yml
benchmarks/samples/: multi_file.diff  single_file.diff
src/code_review_bot/: __init__.py  cli.py  diff.py  llm.py  models.py  prompts.py  render.py  review.py
tests/: test_diff.py  test_render.py  test_review.py
